name:                bndb
version:             0.1.0.0
synopsis:            Beenotes backend
description:         Please see README.md
homepage:            http://github.com/githubuser/bndb#readme
license:             BSD3
license-file:        LICENSE
author:              @hugo_dc
maintainer:          jhugodc@gmail.com
copyright:           2010 MazLab
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10

executable bndb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , directory >= 1.2.2.0
                     , bytestring
                     , transformers
                     , sqlite-simple
                     , scotty
                     , text
                     , time
                     , process

                     
